cUber to go title edit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CUber</title>
+	<title>CUber To Go!</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="cuber.css">
 	<!--[if lt IE9]>
